# fabric-iq-finance

./: .gitignore  README.md  pyproject.toml  requirements.txt
Fabric IQ/1_Ontology/Ontology.Ontology/: .platform
Fabric IQ/1_Ontology/Ontology.Ontology/EntityTypes/161502922886899/: definition.json
Fabric IQ/1_Ontology/Ontology.Ontology/EntityTypes/194701271121049/: definition.json
Fabric IQ/1_Ontology/Ontology.Ontology/EntityTypes/227926818294162/: definition.json
Fabric IQ/1_Ontology/Ontology.Ontology/EntityTypes/235733651414851/: definition.json
Fabric IQ/5_Data agent/DA_PortfolioIQ.DataAgent/: .platform
Lakehouse.Lakehouse/: .platform  shortcuts.metadata.json
NB_diversification_graph.Notebook/: .platform  notebook-content.py
NB_portfolio_actuals_refresh.Notebook/: .platform  notebook-content.py
NB_portfolio_optimizer.Notebook/: .platform  notebook-content.py
NB_value_screen.Notebook/: .platform  notebook-content.py
Notebooks/NB_diversification_graph.Notebook/: .platform  notebook-content.py
Notebooks/NB_portfolio_actuals_refresh.Notebook/: notebook-content.py
Notebooks/NB_portfolio_optimizer.Notebook/: .platform  notebook-content.py
Notebooks/NB_value_screen.Notebook/: notebook-content.py
PL_Orchestrator.DataPipeline/: .platform  pipeline-content.json
VL_Variables.VariableLibrary/: .platform  variables.json
src/portfolio_iq/: __init__.py  allocation.py  diversification.py  gold.py  optimizer.py  screening.py
tests/: conftest.py  test_allocation.py  test_diversification.py  test_gold.py  test_optimizer.py  test_screening.py
(+18 files in other folders)
