[project]
name = "portfolio_iq"
version = "0.1.0"
description = "Quant intelligence layer for fabric-iq-finance: sector-relative value screening, correlation-graph diversification analytics, mean-variance optimization, and discrete allocation."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<2.0",
    "scipy>=1.12,<2.0",
    "PyPortfolioOpt>=1.5,<2.0",
    "networkx>=3.2,<4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
